<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/importanceSign"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/toDoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/importanceSign"
            android:layout_toStartOf="@id/done"
            android:text="@string/item"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine = "true"

            />

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toDoItem"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/importanceSign"
            android:layout_toStartOf="@id/done"
            android:text="@string/item_description"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:singleLine = "true" />

        <CheckBox
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>