<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sub_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".SubItemsActivity">

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recViewSubItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="120dp"
        tools:listitem="@layout/to_do_sub_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addSubItemButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="40dp"
        android:stateListAnimator="@null"
        app:backgroundTint="#02FFEA"
        app:srcCompat="@drawable/ic_add" />

    <Button
        android:id="@+id/desc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="40dp"
        android:background="@drawable/button"
        android:text="@string/description"
        app:layout_dodgeInsetEdges="bottom"/>

    <Button
        android:id="@+id/item_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="40dp"
        android:background="@drawable/button"
        android:text="@string/show_text"
        app:layout_dodgeInsetEdges="bottom"/>

    <FrameLayout
        android:id="@+id/add_sub_item_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerInParent="true" />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet_activity_text"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/holo_blue_light"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:layout_insetEdge="bottom">

        <EditText
            android:id="@+id/item_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:hint="@string/new_item_activity"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.core.widget.NestedScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet_desc"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/holo_blue_light"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:layout_insetEdge="bottom">

        <EditText
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:hint="@string/new_item_note"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>